--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5t6XC29ao3ptx2xoSsT1
+    access-key-secret: P629CZCd5wPl5jrG8Wcsfe6Exi0Srs
+    bucket-name: sky-itcast-gyf
